--- a/history
+++ b/history
@@ -1,315 +1,61 @@
-cat < file
-cat < file
-cat < file
-cat < file
-cat < file
+ls | rev | cat -e > file
+ls | rev | cat -e > file
+ls | rev | cat -e > file
+           ;;;ls
 ls
-cat < file
-cat < file
-ls ze 2> file
-ls ze 2> file
-ls ze 2> file
-ls > file
-ls > file
-ls > file
-ls > file
-ls > file
-cat < file
-cat < file
-cat < file
-cat < file
-cat < file
-cat < file
+ls
 clear
 ls
-ls -l auteur aeraz 2>&1
- ls
+ls
+clear
+ls
+clear
+ls | rev
+env
+clear
 ls -R
 ls
-ls -l auteur aze 2>&1 1> file | rev
-ls -l auteur aze 2>&1 1> file | rev
-cat file
-ls -l auteur aze 2>&- 1> file
-ls -l auteur aze 2>&-
-ls -l auteur
-ls -l auteur zff 2>&- 1> file
-ls -l auteur zff
-ls -l auteur
-ls efdaze || ls && ls
-ls efdaze || ls
-ls efdaze
-ls
 clear
-ls ; ls
-; ls
-;ls
-ls;ls
-; ls
-||ls
-ls||ls
 ls
-
-
-
-
-
-
-
-
-
-
- 
-l
 cat < file
-cat < file
-cat < file
-cat < file
-cat < file
-cat < file
-cat file
-cat file
-cat < file
-ls < file
 ls | rev
-ls | ls
-ls
-ls
-clear
-ls
-lz
-&&ls|ls||||ls&&ls&&
-&&ls|ls||ls&&ls&&
-&&ls|ls||ls&&ls&&||
-&&ls|ls||ls&&ls&&||
-&&ls|ls||ls&&ls&&
-ls|ls||ls&&ls&&
-ls|ls||ls&&ls
-ls;ls|ls||ls&&ls
-ls;ls|ls||ls&&ls;
-ls;ls|ls
-ls;ls|ls
-ls;ls
-ls|ls
-ls||ls
-ls&&ls
-ls&&ls
-ls&&ls
-ls&&ls
-ls && ls
- ls || ls
- ls || ls
- ls || ls
- ls || ls
- ls || ls
- ls || ls
- ls || ls
- ls || ls
- ls || ls
- ls || ls
- ls || ls
-ls
-ls||ls
-ls
-ls&&ls
-ls&&ls
-ls && ls
-ls;;;;;;;;;;ls
-;;;;;;;;;ls
-ls
-ls ||ls
-ls
-ls|ls
-exit
-exit
-21sh
-/bin/ls
-clear
-ls
-z
-z
-z
-
-az
-claa
+ls -l auteur wdgwgfwe wef 2>&1 1>&-
+env 1> file ; cat file rrg 2>&1 1>&- |
+env 1> file ; cat file rrg 2>&1 1>&- | rev
+env 1> file ; cat file rrg 2>&1 1>&- |rev
 ls
 clear
+echo "j'ai faim"
+echo "lol"
+ls
+clear
+wdqverd ls -la
 ls -la
-ls
-setenc PWD oajg
-setenc PWD oajg
-ls
-setenc PWD oajg
-setenc PWD oajg
-setenv PWD oajg
-setenc PWD oajg
-clear
-ls && ls ezf && ls
-ls
-ls
-ls|rev
-ls | rev
-ls 
-ls;ls
-ls;ls
-ls ; ls
-ls
-   ls -l aze Makefile 
-   ls -l aze Makefile 
-ls aze 
-;;;;;;;;;;;;;;;;;;;;;;;
-ls 
-ls
-clear
-ls | ls
-clear
-cleqr
-cleqr
-;;;;;;;;;;;;ls
-;;;;;;;;;;;;;;;&&&&&&&&&&                    ls
-;;;;;;;;;;;;;;;;;;;ls
-ls
-cleqr
-ls
-ls
-||
-               ls
-||||||||||||||||||;;;;;;;;;;;;;;;;;;;;;&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&         ls
-clear
-||||||||||||||||||||&&&&&&;;;;;;;;;;;;;           ls
-ls
-&&ls
-||||clear
-             ls
-ls
-                                            
-                     
-   
+qwfqerdwfqrceqd f; rqwed fqredfcqdfqw 
+qwdfeqw ; qwefqwe
+cerdv; qwefce
+fedsv
+vcq 
+vcdq
+qewqd sqvcrdsfcredf
+ dsfc
+dsfc
+f qr
+verd fsvqerd
+wscqeovhwfbiv fwkve]dvq edf
 
 
 
-ls
-     
-ls||env||env&&ls
-ls||env||env&&ls
-ls||env||env&&ls
-ls||env||env&&ls
-ls||env||env
-ls||env
-ls || env
-ls
-ls||ls
-ls||ls
-ls||ls&&ls
-ls
-ls||ls||ls&&ls
-ls||ls
-ls||ls
-ls|| ls
- ls
-ls
-ls ff||env
-ls ff|| env
-ls ff||env
-cat file
 
-cat file
-ls -l auteur aaze 2>&1 >&- | > file
-ls -l auteur aaze 2>&1 >&- | rev
-ls -l auteur aaze 2>&1 >&-
-ls | rev
-ls
-ls ff|| env
-ls ff||env
-ls ff||env
-ls ff||env
-ls ff||env
-ls ff||env
-ls||env
-ls||ls
-ls
-l
-ls||ls||
-ls||ls||
-ls ||ls||
-ls || ls||
-ls ||
-ls ||ls 
-ls && env
-ls
-ls || ls|| ls ||ls||
-ls || ls|| ls ||ls||
-ls ls
-lsls
-ls
 
-clear
-ls
-ls && && &&
-f;f;f;f;;;
-f
-f
-ls -l auteur af 2>&1 1>&-
-ls -l auteur af 2>&1 | rev
-ls af 2>&1 | rev
-ls ezaf || ls
-ls
-clear
-ls && env
-ls
-make save
-ls
-clear
-cat file
-ls -l wef 21sh  2>&1 | rev > file
-ls -l wef 21sh  2>&1 | rev 
-ls -l wef 21sh  2>&1 
-ls  wef  2>&1 
-ls 2>&1 
-ls | rev
-ls
-ls -l auteur eqrf 2>&1 | rev
-ls -l auteur eqrf 2>&1
-ls -l auteur eqrf 2>&1
-ls
-ls -l auteur eqrf 2>&1
-ls -l auteur eqrf 2>&1
-ls -l auteur eqrf 2>&1
-ls -l auteur eqrf 2>&1
-clear
-ls -l auteur eqrf 2>&1
-ls -l auteur eqrf 2>&1
-ls -l auteur eqrf 2>&1
-ls
-ls
-ls -l auteur eqrf 2>&1
-ls -l auteur eqrf 2>&1
-clear
 
-ls -l auteur eqrf 2>&1
-ls -l auteur eqrf 2>&1
-ls -l auteur eqrf 2>&1
-ls -l auteur eqrf 2>&1
-ls -l auteur eqrf 2>&1
-ls -l auteur eqrf 2>&1
-ls -l auteur eqrf 2>&1
-ls -l auteur eqrf 2>&1
-ls -l auteur eqrf 2> file
-ls -l auteur eqrf 2> file
-ls -l auteur eqrf 2> file
-ls -l auteur eqrf 2> file
-ls -l auteur eqrf 2> file
-ls -l auteur eqrf 2>&1
-ls -l auteur eqrf 2>&1
-ls -l auteur eqrf 2>&1
-ls -l auteur eqrf 2>&1
-ls
-ls -l auteur eqrf 2>&1
-ls -l auteur eqrf 2>&1
-ls ewv || ls
-eqrg || ls
-ls || env
-ls
-clear
+vq
+vqed
+vqed
+qwfcqd
+qwef
+wqef
+wfqwef
 
 
 
@@ -320,319 +66,12 @@ clear
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-\
-\
-ls < file
-ls < file
-ls < file
-ls
-clear
-cat << EOF
-cat << 
-cat < file
-cat < file
-cat < file
-cat < file
-cat < file
-cat < file
-cat < file
-ls
-clear
-ls -l auteur wefvqwr 2>&- 1> file; cat file | rev 
-ls -l auteur wefvqwr 2>&- 1> file; cat file | rev
-ls -l auteur wefvqwr 2>&- 1> file
-ls -l auteur wefvqwr 2>&- 
-ls -l auteur wefvqwr
-ls
-clear
-qsceqfq
-'qqef
-ls
-clear
-ls ewfg 2>&1 | rev
-ls ewfg 2>&1 | rev
-ls | rev 
-qrgiu || ls && ls
-clear
-qrgiu || ls && ls
-clear
-qwrgqr  || qwr   || eqvqerv
-qwrgqr  || qwr   
-qwrgqr  || ls
-qwrgqr  || ls
-qwrgqr  || ls
-qwrgqr  || ls
-qwrgqr  || ls
-qwrgqr  || ls
-ls qwef || ls || ls || efvb
-ls qwef || ls || ls
-ls qwef || ls
-ls | rev
-clear
-ls wef && echo ok
-ls && echo ok
-ls
-clear
-lsls
-wqef || ls && echo lol
-wef || l
-wef || ls
-wef || ls
-wef || ls
-wef || ls
-ls || ls
-clear
-clear
-ls ; ls || rev
-ls ;
-ls ; ls
-ls
-ls | rev
-ls
-clear
-ls -l
-ls -a
-ls
-clear
-lqrev || wef
-lqrev || wef
-lqrev || wef
-lqrev||wef
-lqrev||
-lll || ls
-lll || ls
-ls || lol
-qwdfv || ls
-qwdfv || ls
-qwdfv || ls
-ls && ls && qerve || ls
-ls && clear
-la
-qwefqwdcx
-wefq
-ls
-clear
-ls qwef  || ls
-ls cwq
-ls
-clear
-ls wqdf || ls
-ls || ls
-qverfv  ; qerv ; ls
-qverfv  ; qerv
-ls | rev
-wed
-clear
-wqvqe ; ls
-wqvqe | ls
-wqvqe && ls
-wefvqefv ; ls
-wefcw || ls
-wefcv
-wefcv
-wefcv
-sc
-ls
-wefw
-ls && env
-ls
-cat file
-ls -l ewqd auteur 2> file
-ls -l ewqd auteur 2>&1
-ls -l ewqd auteur 2>&1
-ls -l ewqd auteur 2>&1
-ls ewqd auteur 2>&1
-ls ewqd auteur 
-ls || ls
-weqf
-wefwe || ls
-clear
-ls -z || ls
-ls && ls -z
-clear
-ls || echo lol
-ls
-ls && ls || rev
-ls && ls || rev
-ls && ls
-ls && ls
-ls
-ls && env
-ls && ls
-ls && env
-ls && ls
-ls wef
+sl
 ls
 ls
-dfiv
-ls | rev
-ls -a
 ls
-ls wefw
-ls | rev | rev
-ls -l auteur wef 2>&1
-ls -l auteur wef 2> file 
-ls -l auteur wef 2> file ; echo FILE: ; cat file
-ls -l auteur wef 2> file  1>> file; echo FILE: ; cat file
-ls -l auteur wef 2> file  1> file; echo FILE: ; cat file
-ls -l auteur wef 2> file ; echo FILE: ; cat file
-ls -l auteur wef 2> file ; echo FILE: 
-ls -l auteur wef 2> file 
-ls -l auteur wef 2>&1 
-ls -l auteur wef 2>&1 
-ls -l auteur wef 2>&1 
-ls wef 2>&1
-ls wef 2>&-
 ls
-clear
-ls ;echo lol > file ; cat file
-ls ;echo lol > file
-ls ;echo lol
-;;;;;;;;;;
-cd ; ;
-ls wqefq
-ls | rev
-ls -l wfqw auteur 2>&- 1> file
-ls -l wfqw auteur 2>&- 1> file
-cat file
-ls -l wfqw auteur 2>&- 1> file
-ls -l auteur  wef 1> file  2>&1 
-ls weqf 2>&1 | rev | cat -e >&2 2>&-
-ls weqf 2>&1 | rev | cat -e >&2
-ls weqf 2>&1 | rev | cat -e >&3
-ls weqf 2>&1 | rev | cat -e >&3
-ls weqf 2>&1 | rev | cat -e >&-
-ls weqf 2>&1 | rev | cat -e 
-clear
 ls
-clear
-cat file
-ls -l auteur ewr 2> file 1>&-
-ls -l auteur ewr 2> file 1>> file 
-ls -l auteur ewr 2> file 1>> file 
-ls -l auteur ewr 2> file 1>> file ; cat file
-ls -l auteur ewr 2> file 1> file ; cat file
-ls -l auteur ewr 2> file ; cat file
-ls ewr 2> file ; cat file
-ls ewr 2 > file ; cat file
-ls ewr  > file ; cat file
-ls > file ; cat file
-cat file
-cat fi
-ls > file
-ls | rev
 ls
-ls -l ewf auteur 2>&1 1>&-
-ls -l ewf auteur 2>&1 1>&-
-ls -l ewf auteur 2>&1 1>&-
-
-ls -l ewf auteur 2>&1 1>&-
-ls -l ewf auteur 2>&- | rev
-ls -l ewf auteur 2>&- | rev
-ls -l ewf auteur 2>&- | rev
-ls -l ewf auteur 2>&- 1>&-
-ls -l ewf auteur 2>&- 1>&-
-ls -l ewf auteur 2>&- 1>&-
-ls -l ewf auteur 2>&-
-ls -l ewf auteur
-ls -l ewf 
-ls ewf 
-cat file
-cat fi
-ls -l qwer auteur > file 2>err
-ls -l qwer auteur > file 2>err
-ls -l qwer auteur > file 2>err
-ls > file
-ls ; ls
 ls
-clear
-ls
-
-ls -l qwer auteur > file 2>err
-ls -l qwer auteur > file 2>err
-ls -l qwer auteur > file 2>err
-cat file
-ls -l qwer auteur > file
-cat file
-ls qwer auteur > file
-cat file
-ls >file
-ls
-ls -l auteur  wef 1> file  2>&1 
-ls -l auteur  wef 1> file  2>&1  | rev
-ls -l auteur  wef 1> file  2>&1  | rev
-
-ls -l auteur  wef 1> file  2>&1  | rev
-ls -l auteur  wef 2>&1  | rev
-ls -l auteur  wef 2>&1  | rev
-clear
-ls -l auteur  wef 2>&1  | rev
-ls -l auteur  wef  | rev
-ls -l auteur  wef 2>&1 | rev
-ls -l auteur  wef 2>&- | rev
-ls -l auteur  wef 2>&-
-ls auteur  wef 2>&-
-ls wef 2>&-
-ls -l wfqw auteur 2>&- 1> file
-clear
-clear
-ls -l wfqw auteur 2>&- 1> file
-ls -l wfqw auteur 2>&-
-ls wfqw auteur 2>&-
-ls wfqw auteur
-ls wef
-ls
-ls -l auteur wef >file 2>&-
-ls -l auteur wef >file 2>&-
-ls -l auteur wef >file 2>&-
-ls -l auteur wef >file
-ls -l auteur wef 1>file
-ls -l auteur wef 
-ls -l auteur wef 2>&1
-ls -l auteur wef 2>&1
-ls -l auteur wef 2>&1
-ls -l auteur wef 2>&1
-ls -l auteur wef 2>&-
-ls -l auteur wef
-ls -l auteur
-ls -l auteur we 2>&1 
-ls -l auteur we 2>>&1 
-ls -l auteur we 2>>&1 | rev
-ls -l auteur we | rev
-ls -l auteur we
-ls -l auteur wef 2>&1  | rev 
-ls wef 2>&1 | rev 
-ls wef  | rev 
-ls | rev 
-clear
 ls
