--- a/history
+++ b/history
@@ -1,3 +1,143 @@
+ls
+clear
+ls
+clear
+ls
+ls
+ls -l -z
+ls
+clear
+ls -lz
+ls -lq
+ls -la
+ls -la
+ls
+ls
+clear
+ ls   -la
+ ls  -la -la
+ ls  -la
+ ls -la
+ls -la
+ls -l
+ls -l
+ls -l
+clear
+clear
+ls -la 
+ls -lRa 
+ls -lRa &&ls
+ls -lRa &&ls
+ls
+ls
+ls
+ls;ls
+ls;ls
+ls ; sl
+ls
+ls
+ls
+ls -lRa
+ls
+ls -la
+ls -la
+ls
+clear
+clear
+ls -l ; ls&&ls
+ls -l ; ls
+ls -l
+ls
+ls||ls||ls&&ls
+ls -la
+ls -la
+ls
+ls
+ls|rev
+ls
+ls | rev
+ls
+ls
+ls
+lks
+ls
+ls
+clear
+clear
+ls 2>&1&&ls
+ls 2>&1&&ls
+ls 2>&1&&ls
+ls 2>&1&&ls
+ls 2>&1&&ls
+ls 2>&1&& ls
+ls 2>&1 && ls
+ls >&1 && ls
+ls >&1 && ls
+clear
+ls >&1 && ls
+ls >&1 && ls
+ls >&1&& ls
+ls >&1&& ls
+ls >&1
+ls >&1
+ls 2>&1
+ls >&1
+ls >&1
+ls >&1
+ls >&1
+ls >&1
+ls >&1
+ls >&-
+ls >&-
+ls >&1
+ls 2>&1
+ls 2>&1
+ls 2>&1
+ls 2>&1
+ls 2>&1
+clear
+ls 2>&1
+ls 2>&1
+ls 2>&1
+ls 2>&1
+ls 2>&1
+ls 2>&1
+ls 2>&1
+ls 2>&1
+ls 2>&1
+ls 2>&1
+ls 2>&1
+ls 2>&1
+ls 2>&1
+ls 2>&1
+ls 2>&1 
+ls 2>&1 file
+ls 2>&1 file
+ls 2>&1 file
+ls 2> file
+ls||ls
+ls |ls
+ls     ls
+ls     ls
+ls 2>&1
+ls||ls&&ls
+ls || env
+clear
+ls
+clear
+ls
+ls
+ls
+clear
+ls
+ls||ls
+ls
+ls
+clear
+ls
+ls;ls
+ls | rev
+ls
 coco > ;
 coco > ;
 coco > ;
