--- a/history
+++ b/history
@@ -1,3 +1,316 @@
+ls|rev
+ls|rev
+ls
+clear
+ls
+ls |rev
+ls|rev
+ls|rev
+ls|rev
+ls
+ls|rev
+clear
+ls -la
+ls
+ls|rev
+clear
+ls -la
+ls
+ms
+clear
+ls
+clear
+ls
+clear
+ls
+clear
+ls
+ms
+env
+clear
+d            PAIKadzdazdadadz
+adazzadef fezfeff
+ls -l
+ls
+exit
+env
+setenv TERM lol
+env
+clear
+ls
+ls;clear
+ls
+ls|rev
+clear
+ls
+ls -la
+ls
+clear
+ls
+ls
+ls
+ls
+ls
+ls
+exit
+cat file
+ls > file
+ls|rev
+ls
+clear
+ls
+ls 2> file
+ls > file
+ls
+ls
+ls > file
+ls
+cat file
+ls > file
+ls
+ls|rev>file
+ls
+clear
+ls|rev
+ls
+ms1
+clear
+e
+ls
+clear
+echo "lo
+echo "lol"
+echo lol
+echo lol
+echo 
+echo mdre
+echo lol
+echo "lo
+echo "j'aifaim"
+clear
+ls
+clear
+ls
+echo "j'aifaim"
+clear
+ls
+ls |rev&&clear
+ls|rev
+ls;ls
+clear
+ls
+echo "lol  "
+ls > file
+ls
+clear
+ls|rev
+ls
+clear
+ls
+echo "    "
+echo lol
+ls && env||echo lol
+ls && env
+ls && ls
+ls || env
+ls;ls
+ls
+ls;ls
+ls
+ls;sl
+ls;ls
+ls&&ls
+ls&&ls
+ls||ls
+ls
+ls
+ls || env
+ls -z ||env
+ls -z
+ls
+ls&&ls
+ls
+ls
+ls|rev
+ls|
+ls
+ls -l
+ls
+clear
+ls
+ls|rev
+ls&&ls
+ls&&ls
+ls&&ls
+ls zafzdf || ls
+ls zafzdf
+ls||ls
+ls&&ls
+clear
+ls
+clear
+ls
+ls
+ls
+ls
+ls
+ls
+ls&&ls
+ls
+
+
+
+
+
+
+ls
+
+
+
+
+
+
+
+
+
+ls
+ls
+
+ls
+ls -l
+ls&&ls
+ls
+ls
+ls -z || ls
+ls -z || ls
+ls&&ls
+clear
+ls
+ls&&ls
+clear
+ls
+ls&&env||echo lol
+clear
+ls
+ls&&ls
+ls
+cleazr
+ls
+ls
+ls
+ls
+ls
+env
+ls
+ls ; ls
+ls
+./21sh
+ls
+ls
+ls&&ls
+ls
+ls
+ls
+ls
+ls
+
+ls
+ls
+./21sh
+ls&&ls
+ls
+ls&&ls
+ls ; ls
+ls
+clear
+ls
+cd
+ls
+ls
+clear
+&& || ; < > << >> ls -l lol
+&& || ; <><<>>ls -l lol
+&&||;<><<>>ls -l lol
+ls;clear
+ls;clear
+ls;clear
+ls;clear
+ls;clear
+ls;clear
+ls
+clear
+ls
+ls
+ls
+ls
+ls ; ls
+ls
+ls & clear
+ls;ls&&ls||ls;;ls
+ls | ls
+ls | ls
+ls | ls
+ls | ls
+ls | ls
+ls | ls
+ls | ls
+ls | ls
+ls ; ls
+ls ; ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls ; ls
+ls||ls;env
+ls ; ls
+ls | rev
+ls | rev
+ls | rev
+ls
+ls
+ls
+ls | rev
+ls | rev
+ls | ls
+ls | ls
+ls | ls
+ls
+wc&&ls||env|ls;env
+wc&&ls||env|ls;env
+wc&&ls||env
+wc&&ls||env
+wc&&ls||env
+wc&&ls||env
+wc&&ls||env
+wc&&ls||env
+wc&&ls||env
+ls&&ls||env
+ls&&ls||
+ls&&ls
+ls
+clear
+ls
+cclear
+clar
+ls
+sl clear
+sl clear
+sl clear
+sl clear
+sl clear
+ls
+ls&&ls
+ls&&ls
+ls&&ls
+ls&&ls
+ls&&ls
+ls
 ls
 clear
 ls
