--- a/history
+++ b/history
@@ -1,3 +1,182 @@
+echo \&
+ls -z||ls a || fazef
+ls||env||ls||ls
+ls&&ls||env
+ls;ls&&ls
+ls;ls
+ls;
+ls
+ls;
+echo "mp
+echo "lol"
+ls
+clear
+ls|rev|cat -e && ze || env
+ls
+ls|rev
+ls -l
+ls
+clear
+ls
+ls&&
+&&ls
+echo "lol
+echo "lol"
+ls
+ls
+&&ls
+ls
+&&ls
+ls&
+clear
+ls|rev&&ls
+ls
+clear
+ls|rev
+clar
+ls
+ls|rev&&lso||env
+ls zer
+
+&&ls
+&&ls
+&&
+ls&&
+ls ||ls
+ls &&
+ls &
+ls
+ls|rev&&lso||env
+ls|rev&&lso||env
+ls|rev
+ls
+ls -l auteur r 1>&- 2>&1  | rev
+ls -l auteur r 2>&1 1>&- | rev
+ls -l auteur r 2>&1 1>&-
+ls -l auteur r
+ls -l auteur ar 1>&- 2>&1 | rev
+ls -l auteur ar 2>&1 1>&- | rev
+ls -l auteur ar
+ls|rev
+ls -l auteur az 1>&- 2>&1 | rev
+ls -l auteur az
+ls -l auteur
+ls zer
+ls|rev
+ls -la
+echo \&
+echo &
+echo "
+ls&&
+clear
+ls|rev>file;cat file;rm -rf file
+clear
+cat file
+ls|rev>file
+ls|rev
+ls|rev
+ls;ls;ls
+ls;ls;ls
+ls;ls
+ls|rev
+ls|rev>file
+clear
+cat file
+ls>file
+clear
+ls
+rm -rf file
+cat file
+ls
+ls|rev>file
+ls|rev
+ls|rev>file
+clear
+ls
+
+ls && 
+clear
+echo "lol
+clear
+clear
+echo "      mdr 
+echo "      mdr 
+echo "      mdr 
+echo "      mdr 
+echo "      mdr 
+echo "      mdr 
+echo "      mdr 
+echo "      mdr "
+echo "lol"
+ls
+echo "lol"
+ls -la
+ls
+clear
+ls
+ls -la
+ls -la
+ls
+ls
+ms
+ls
+env
+ls
+clear
+ls
+ls;ls
+ls
+ls -la
+ls
+clear
+ls
+ls
+ls
+ls -la
+ls
+ls
+ls -la
+ls
+echo "lol"
+ls
+ls
+ls&&ls
+ls
+echo \&
+echo &
+echo lol
+clear
+ls
+
+ls
+clear
+ls
+rm -rf fil file 
+ls
+clear
+cat fil
+ls > fil
+env
+ls
+clear
+ls
+ls
+ls zef
+
+ls sadzdfef  zfdfzff
+ls
+clear
+ls
+
+ls > file
+ls
+clear
+ls&&ls zaf || env
+ls&&ls||env
+ls&&ls;ls
+ls&&env
+clear
+ls
 ls
 clear
 ls -l  auteur  ezra 2>&1 1>&- | rev
