--- a/history
+++ b/history
@@ -1,3 +1,126 @@
+sudo make save
+make save
+clear
+cclear
+echo "ls"
+"echo "lol"
+echo "ls
+ls
+clear
+echo "lol"
+echo "lol"
+echo "lol"
+echo "lol"
+echo lol
+echo "lol"
+cler
+echo "lol"
+echo "lol"
+env |grep PWD&&echo lolll
+clear
+env |grep PWD
+env
+ls
+clear
+clear
+echo lol"
+echo lol"
+echo "lo
+echo "lol"
+echo "lol"
+ls
+echo "lol"
+ls
+echo "lol"
+echo lol
+ls
+echo "lol"
+env
+lsenv
+ls
+clear
+ls -l|rev
+ls|rev
+ls
+echo "lol"
+echo "lol"
+ls |rev
+ls
+echo "lol"
+echo "lol"
+ls -la
+ls
+clear
+env
+ls
+clear
+ls|rev&&ls
+clear
+env
+ls|rev
+ls -l
+ls|rev
+ls&&ls
+ls|rev
+ls
+echo 
+echo \&\&
+echo \&
+echo \&
+ls
+ls|rev
+env
+ls
+echo\&\&
+clear
+echo \&
+echo "lol
+ls "fzueifhziu
+&&
+echo \&
+&&ls
+ls
+&&ls
+ls
+clear
+ls
+ls
+ls|rev
+ls
+echo "lol"
+echo "LOL&&"
+echo \&\&
+ls
+clear
+echo \&
+ls
+echo \&
+ls
+clear
+ls&&ls
+ls;
+ls
+clear
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls
 echo \&
 ls -z||ls a || fazef
 ls||env||ls||ls
