--- a/history
+++ b/history
@@ -1,3 +1,107 @@
+rev
+ls || 
+clear
+ls && 
+ls && 
+ls
+ls &&
+ls
+ls || 
+clear
+ls || 
+ls && 
+ls || env
+rev
+ls |
+ls &&
+ls
+ls &&
+ls && 
+ls && 
+clear
+ls &7 
+ls && 
+ls && 
+ls
+ls &&
+ls && 
+ls && 
+ls && 
+ls
+ls &&
+ls &&
+ls && 
+clear
+ls && 
+ls &
+ls
+ls||
+l;s
+clear
+rev
+ls|
+;ls
+;ls
+ls ;
+ls ;
+rev
+rev
+ls |
+ls
+ls ||
+ls
+clear
+ls
+ls &&
+ls && ls
+clear
+ls
+rev
+ls |
+ls
+rev
+ls |
+ks
+ls &&
+ls
+rev
+ls |
+ls
+clear
+ls ;
+cleqr
+ls &&
+env
+ls||
+ss
+ls &&
+ls
+clear
+ls
+ks
+ls||
+ls && 
+clear
+echo lol"lol
+ls |
+ls && echo "lol
+ls && 
+ls &&
+ls
+clear
+ls &&
+ls
+;ls
+ls
+ld
+;ls
+ls
+ls
+clear
+ls
+;ls
+ls &&
+ls
 sudo make save
 make save
 clear
