--- a/history
+++ b/history
@@ -1,3 +1,793 @@
+make save
+clear
+rev
+rev|
+rev|
+rev|
+rev|
+rev|
+rev|
+rev|
+rev|
+ls|rev|
+ld|rev
+rev
+ls|rev|rev|rev|
+rev
+ls |
+ls
+ls -R
+ls
+clear
+"
+echo " 
+echo ""
+echo "
+'
+echo "
+'
+l
+l
+l
+echo 'lo 
+l'
+echo 'lo 
+'
+echo 'lo
+
+eqwf"
+"
+"
+"
+"
+'
+
+:
+\"
+\"
+echo "lo
+rev
+ls|
+ls
+clear
+rev
+ls|
+clear
+ls
+rev
+ls|
+ls
+ls|
+ls
+|rev
+ls|rev
+ls
+clear
+ls
+ls
+clear
+mdr"
+l
+echo "lo
+"
+lo
+lo
+echo "lo
+l"
+echo "lo
+l"
+l"
+echo "lo
+echo "lol"
+"
+echo "lo
+"
+wefwefwe
+wefewfwe
+wefwwfwf
+echo "lol
+ls
+clear
+ls
+ls&&
+rev
+ls|
+ls
+clear
+ls
+clear
+ls
+Afwef
+fweverdgv||
+fnwr||
+wdgw||
+wfw ||
+env
+ls||
+ls |rev
+ls
+ls
+lol
+ls
+clear
+ls
+clear
+env -i VAR=NAME LOL=MDR  |rev\
+env -i VAR=NAME LOL=MDR 
+env -i VAR=NAME LOL=MDR
+env -i VAR=NAME
+env -i VAR NAME
+env
+clear
+env -i make fre
+ls
+env -i make fre
+env
+ls
+exit
+ls
+clear
+env
+env -i make fre
+clear
+env -i make
+cd
+clear
+env
+unsetenv PWD
+cd 
+clear
+echo lol
+ls
+env
+ls
+;s
+clear
+env | grep VAR
+setenv VAR NAME
+env
+clear
+env
+clear
+env
+env
+ls
+l
+clear
+
+|
+rev
+|
+rev
+ |
+ls
+clear
+"
+echo "lO
+ls
+clear
+clar
+rev
+ls ; ls|
+ls ;
+ls
+clear
+env
+env | cat -e
+emv | cat -e
+clear
+rev
+env|
+env|ls
+ls||ls
+rev
+ls |
+
+"
+echo "lowefwef
+ls
+clear
+"
+echo "lo
+ls
+clear
+echo "LOL\" \' "
+echo "LOL\" "
+echo "LOL\" "
+echo "LOL\" "
+echo "\""
+"
+echo "\d'
+echo \l
+echo \
+"
+\"
+\"
+echo "lo
+l\"
+echo "lo
+mdr"
+l
+echo "lo
+\"
+mdr
+l
+echo "lo
+clear
+ls
+clear
+mdr"
+l
+echo "lo
+ls
+mdr"
+l
+echo "lo
+"
+mdr
+le
+echo "lo
+clear
+rev
+ls|
+clear
+ls
+clear&&
+rev
+ls|
+clear
+ptdr"
+mdr
+echo "lo
+ptdr"
+mdr
+echo "looooooooo
+ptdr"
+lmdr
+echo "looooooooo
+clear
+l"
+echo "looooooooo
+l"
+echo "looooooooo
+echo "looooooooo
+echo "looooooooo
+echo "looooooooo
+echo "looooooooo"
+echo "looooooooo
+echo "looooooooo
+echo "looooooooo
+echo "looooooooo
+echo "looooooooo
+echo "looooooooo
+echo "looooooooo
+"
+"
+'
+ls
+'
+"
+"
+"
+"
+"
+echo "looooooooo
+ls
+rev
+ls|
+ls
+lol
+clear&&
+rev
+ls|
+rev
+ls|
+rev
+ls|
+ls|rev|rev
+ls|rev
+ls
+env
+ls
+clear
+"
+wfwr " "lol 
+echo "lolwwefw 
+
+XPTDR"
+echo "lol mdr
+echo "lol" mdr
+TRU"
+mdr" "PAUL
+echo "lol
+l"
+mdr" "lo
+echo "lol
+mfr"
+echo "lol
+ls
+ mdr";ls
+echo "lol
+mdr"
+echo "lol
+clear
+mdr"
+mdr" "lol
+echo "lol
+mdr"
+echo "lol
+ls
+clear
+clear
+cler
+ls
+"
+echo "ls
+ls
+ls
+clear
+ls
+ls
+ergwergwetgbwe"
+echo "lo
+l"
+echo "lo
+l"
+echo "lo
+mdr"
+echo "lo
+l"
+echo "lo
+l"
+echo "lo
+"
+echo "lo
+l"
+echo "lo
+wfwef"
+echo "lowef
+wefwfw"
+wefwfw"
+echo "lowef
+"
+echo "lo
+ls
+clear
+l"
+l"
+echo "lo
+ls
+clear
+mdr"
+mdr"
+echo "lol
+wefqwe"
+echo "ogweguiwerhgiue 
+wefqwe"
+wefwf
+echo "ogweguiwerhgiue 
+wdfqergerfbwrgfdbrtwfb"
+echo "ogweguiwerhgiue 
+wefwe"
+echo "lol
+wefwe"
+echo "lol
+"
+echo "lo
+
+
+
+
+
+
+
+
+
+ls
+clear
+clear
+env | grep PWD
+env | grep pwd
+env | greppwd
+env
+ls
+clear
+ls
+lol"
+echo "
+rev
+ls|
+ls|rev
+ls
+clear
+lol"
+echo "lo
+lol"
+ mdr
+echo "lo
+"
+echo "lo
+ls
+mdr"
+echo "lo
+lol"
+lol"
+mdr"
+mdr"
+echo "lol
+mdr"
+mdr"
+echo "lol
+ls
+echo "pwd \n\""
+echo "pwd \n\" "
+echo "lo p"
+ "
+echo "lo
+"
+echo "lo
+ls
+ls
+"
+"
+wefw"
+"
+"
+"
+;"
+echo "lo
+l"
+echo "lo
+sfwfw"
+echo "lo
+"
+echo "lo
+"
+:"
+echo "lo
+"
+"
+l
+echo "lo
+"
+echo " lol
+echo "lol"
+clear
+"
+clear"
+"
+ls
+echo " pwd 
+"
+  "
+  "
+   "
+echo " pwd 
+ls
+clear
+"
+wefwe"
+echo "ewfw
+"
+"
+pq
+lol
+mdr
+echo "rqgqergg 
+ls
+clear
+ls
+clear
+env
+clear
+ls|rev
+reqgvf||rerev||ls
+ls||egq
+ls|rev
+clear
+ls
+ld
+clear
+;ls
+|rev
+clear
+rev
+ls|rev| cat -e |
+ls|rev| cat -e
+ls|rev| cat-e
+ls|rev|cat-e
+wfw||
+ls|rev;
+ls||
+rev
+ls|
+clear
+ls
+echo lol
+ls
+clear
+
+
+
+
+
+
+
+echo lol
+ls &&
+ls
+clear
+ls -z||
+ls
+clear
+ls \&
+ls
+clear
+ls
+echo "\""
+echo "\" "
+"
+echo "\""
+echo " "
+"
+echo "
+"
+echo "lo
+"
+lol"
+"
+"
+echo "lol
+"\n"
+"
+echo "lo
+ls
+"
+echo "lo
+ls
+"
+echo "lo
+clear
+rev
+ls |
+clear
+ls
+clear
+clear
+ls
+ls
+clear
+clear
+clear
+
+clear
+ls
+clear
+ls
+ls
+ls
+ls
+clear
+clear
+"
+echo "lol
+"
+echo "lol
+ls
+clear
+ls
+exit
+"
+mdr"
+echo "lol 
+ls
+mdr"
+echo "lol 
+"
+echo "lol '
+echo "lol"
+"
+lol"
+lol"
+lol"
+"
+"
+mdr"
+echo "lol
+echo \&\& "\ "
+"
+n"
+echo \&\& "\
+lol"
+lol"
+echo \&\& "\
+echo \&\& "\
+exit
+\ls
+s
+make exe
+ls
+clear
+'\n'
+"\n"
+\n
+\n
+man ascii
+man echo
+ls
+clear
+echo "lol \" \" "
+ls
+clear
+ls
+clear
+ls
+wdvrwv ||
+wfw || ls
+ls
+ls || emv
+ls
+ls
+clear
+echo "lol \' "
+echo "lol \' "
+echo "lol \' "
+ls
+clear
+ls
+echo "lOOOL \' \" "
+echolol
+pwd
+ls
+echo \n
+ls
+clear
+echo "\n"
+echo "\e"
+clear
+echo "lol  \"  \" " \"
+echo "lol  \"  \" "
+echo "lol  \"  "
+echo "lol"
+echo "lol\""
+echo "lol\""
+echo "lol\"t"
+echo "lol\"t"
+echo "lol\'t"
+echo "lol\t"
+echo "lol"
+echo "lol"
+echo "lol
+ls;
+echo ";"
+echo "LOL
+clear
+ls
+echo "lol
+ls|rv
+clear
+ls
+"
+echo "lol
+echo "lol
+"
+echo "j'ai faim 
+clear
+ls -z || envwef || ls wef || ls
+ls -z || envwef || ls wef ||
+echo lol
+ls -z || envwef || ls wef ||
+clear
+ls
+ls&&
+ls
+clear
+ls
+ls wqef || 
+rev
+ls |
+ls
+clear
+;ls
+rev
+ls|
+clear
+env
+ls
+clear
+env
+ls -z || 
+ls -z || env
+ls
+ls &&
+ls
+clear
+rev
+ls |
+clear
+ls
+echo "lol\" mdr"
+echo "mdr'lol"
+echo "mdrlol"
+"
+echo "mdr
+clear
+ls
+"
+ls "lol
+ls
+echo lol"sdf
+echo \&\&
+echo \& lol
+echo \& lol
+echo \& \&
+echo \&\&
+echo \&
+echo \&
+echo "lol"
+"
+"
+echo "lol
+ls
+clear
+ls
+eee"eee
+"
+lol
+mdr"
+mdr"
+echo "lol 
+clear
+env
+ls
+"
+lol
+echo "lol
+echo "lol"
+"
+"
+lol
+mdr
+echo "lol
+echo "lol
+echo "lol
+clear
+cleaar
+ls
+echo "lol
+echo "lol
+ls
+echo "lol
+echo "lol
+echo "lol
+clear
+rev
+ls |
+clear
+ceqr
+cleqwr
+ls
+echo "lo
+echo "lol
+echo '
+echo 'lol'
+ls
+2>&-
+ls
+clear
+rev
+ls|
+clear
+ls && 
+ls
+clear
+rev
+ls |
+ls
+clear
+cear
+ls
+ls ||
 rev
 ls || 
 clear
