--- a/history
+++ b/history
@@ -1,3 +1,130 @@
+ls
+clear
+rev
+ls|
+||rev
+clear
+ls
+clear
+ls
+rm -rf file
+cat file
+ls > file
+env
+ls
+clear
+wfw
+wefe||
+swfw
+ls||
+rev
+ls|
+clear
+ls
+clear&&
+clear
+echo "\""
+"\n"
+"
+echo "\""
+echo "\""
+"
+echo "\""
+echo "\""
+echo "\""
+exit
+rev
+ls|
+ls
+ls
+clear
+ls
+echo "\""
+echo "\""
+echo "\""
+echo "\""
+echo "lol \""
+echo "lol \"\'"
+echo "lol \" "
+echo "lol \" "
+echo "lol |" "
+ls"
+echo "l\" "
+l"
+echo "lo
+l"
+lo
+echo "
+rev
+ls|rev|rev|rev|
+ls
+echo " \' "
+"
+echo "\'"
+"
+"
+\"
+echo "l
+ls
+clear&&
+clear
+"
+'
+:
+"
+\"
+wefwefcw\"
+echo "lo
+"
+echo "lo
+"
+l
+l
+l
+echo "lo
+l"
+echo "lo
+echo "lo
+echo "lo
+l"
+echo "
+echo "
+"
+l
+echo "
+ls
+clear
+"
+echo "\" "
+echo "\" "
+echo "\" "
+echo "\" "
+echo "\" "
+echo "\"
+echo "\""
+echo "\"
+echo "\"
+echo "\"
+echo "\"
+echo "\"
+echo "\"
+echo "\""
+echo "\""
+echo "\""
+echo "\"
+echo "\"
+echo "\"
+echo "\"
+echo "\"
+echo "\"
+l"
+echo "
+make exe
+echo "
+rev
+ls|
+clear
+ls
 make save
 clear
 rev
