--- a/history
+++ b/history
@@ -1,3 +1,190 @@
+exit
+make save
+cleaar
+"
+l
+l
+echo "lo
+rev
+ls|
+ls
+
+sudo make re
+env -i make re
+env -i make gt
+env -i make
+ls
+clear
+env -i ls
+ls 
+sudo make fre
+ls
+rm -rf file
+cat file
+ls
+ls > file
+ls
+ls&&
+rev
+ls|
+ls
+rev
+ls |
+clear
+ls
+sudo make fre
+make fre
+make fe
+cat < file
+cat file
+ls > file
+lq
+lq
+rev
+ls|
+clear
+ls
+clear
+ls&&
+ls
+clear
+rev
+ls|
+ls
+ls
+clear
+ls
+clear
+ls
+exit
+ls
+ls
+env
+ls
+clear
+ls
+ls -z ||
+env
+ls
+clear
+ls
+ls
+env
+ls
+echo \l
+ls
+ls
+ls
+ls
+ls
+ls
+ls > file
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+clear
+lear
+ls
+ls
+env
+env
+exit
+ls
+celar
+ls
+clear
+ear
+env
+ls
+clear
+env | grep LESS
+env
+ls
+clear
+cat < file
+cat file
+ls > file
+cat < file
+cat < file
+cat < file
+ls
+clear
+clar
+env | grep PWD >> file && cat file
+env | grep PWD >> file && cat file
+env | grep PWD >> file && cat file
+env | grep PWD > file && cat file
+env | grep PWD > file && cat file
+env | grep PWD > file && cat file
+clear
+pwd > file ; cat file
+ls
+pwd
+make fre && ./21sh
+ls
+clear
+ls
+exit
+ls
+ls
+clear
+ls
+rm -rf file
+cat file
+clear
+ls
+rm -rf f
+cat f
+ls> f
+clear
+env >> file
+ls >> file
+ls >> file
+ls > file
+ls > file
+ls -l >> file
+cat file
+ls -l >> file
+cat file
+ls -l >> file
+cat file
+ls > file
+clear
+ls
+echo "mdr\"j\'ai faim"
+clear
+echo "lol\"mdr"
+cat file
+ls >> file
+ls|rev
+ls
+ls -l >> file
+cat file
+ls -l >> file
+cat file
+ls > file
+cat < file
+cat < file
+cat file
+ls > file
+ls
+ls
+clear
+ls
+rm -rf file
+ls
+rm -rf \;
+ls
+rm -rf ;
+ls
 ls
 clear
 rev
