--- a/history
+++ b/history
@@ -1,3 +1,926 @@
+eoi
+ptdr
+eoi
+cdrol
+mdr
+cat << eoi | rev << eoi
+eoi
+mdr
+cat << eoi | rev
+rev
+ls | 
+ls | rev
+ls
+clear
+ls
+ls
+exit
+ls
+cd
+ls
+clear
+ls
+cd
+exit
+ls -a
+ls
+
+clear
+ls
+ls | cat -e
+ls
+sudo make fre
+sudo make
+make
+env
+ls
+ls  -l
+clear
+ls
+exit
+clear
+ls
+ls
+exit
+ls
+ls
+clear
+ls
+env |rev
+env
+ls
+
+clear
+cler
+ls
+ls | rev
+ls
+clear
+ls
+ls auteur zaeaz 2>&- | rev
+ls > file
+ls
+ls -l auteur err 2>&- | rev
+ls -l auteur azar 2>&-
+ls
+clear
+ls
+ls auteur  aze 2>&- | rev
+ls | rev
+ls -l auteur zefze 1> file 2>&1 | rev
+ls -l auteur zefze 1> file 2>&1 
+ls -l auteur zefze 1> file 2>&1 | rev
+ls > file | rev
+cat file
+ls > file
+ls -l
+ls
+clear
+ls
+cat < file 
+cat < file | rev
+clear
+ls -l auteur eee || env
+clear
+ls
+ls -z || 
+ls -z
+ls
+clear
+rev < zdf
+rev < file
+ls | rev
+cat file
+ls | rev > file
+ls | rev
+ls | rev < file
+ls | rev > file
+clear
+exit
+clear
+ls -l | rev < file
+clear
+eoi
+mdr
+lol
+cat << eoi
+exit
+clear
+eoi
+lolo
+cat << eoi
+eoi
+j'ai faim
+looooooooooooooooooooooooooool
+cat << eoi
+cat <<
+clear
+
+ls
+ls
+
+ls
+ls|rev
+ls>
+ls
+exit
+exi
+ls>file
+ls>
+clear
+ls
+rev
+ls|
+ls-
+ls
+exit
+clear
+
+arls|rev
+ls|rev
+cat file
+ls>file
+ls>
+
+ls
+exit
+ls>
+ls>
+ls>
+
+ls >
+ls>
+ls>
+ls -l
+clear
+ls
+
+ls>
+ls>
+ >
+ls
+ls>
+
+ls
+ls>
+ls>
+
+ls
+ls>
+ls>
+cat file
+ls > file
+clear
+ls
+exit
+ls >
+ls >
+rev
+ls|
+ls
+exit
+kls
+eoi
+lol
+ls ; cat << eoi
+eoi
+lol
+ls ; cat << eoi
+cat <<
+rev
+ls |
+clear
+eze";ls
+mdr
+lol
+echo "d
+cat file
+ls > file
+ls >
+ls > file
+cat << eof
+cat file
+ls > file
+ls
+ls
+clear
+cat file
+ls>>file
+ls >&-
+cat file
+ls > file
+ls >
+clear
+ls
+ls >&-
+clear
+ls
+ls|rev
+ls
+rev
+ls |
+ls|rev
+ls|rev
+ls|rev
+ls
+rev
+ls|
+ls -r
+
+ls
+cat Makefile
+cat < Makefile
+sudo cat Makefile
+ls -l
+cat Makefile
+ls
+ls
+echo $T
+env
+ls
+clear
+clear
+ls
+clear
+$PATH
+env
+exit
+
+exexit
+ls | rev
+env | grep PWD | rev | rev
+env
+ls
+exit
+erf | rev
+efe 
+ls -z
+clear
+ls
+pwd
+env
+ls
+
+clear
+ls
+ls | rev > file ; cat < file 
+ls | rev > file ; cat < file | rev
+ls | rev > file ; cat < file | rev
+ls | rev > file ; cat < file | rev
+"
+lol
+lol
+lol
+echo "lol
+rev
+ls|
+lls
+ar
+ls
+exit
+clear
+ls
+setenv PATH /bin
+clear
+ls
+env
+ls
+ls
+env | grep PATH | cat -e
+unset PATH
+clear
+env
+v
+clear
+env
+grep PATH 
+env | 
+ls
+ls 
+clear
+grep PATH
+env |
+ls
+clear
+ls
+ls
+ls
+ls
+ls
+clear
+";ls -l
+echo "lo
+l"
+echo "lo
+rev
+ls |
+ls 
+clear
+cat < file
+cat file
+ls > file
+ls
+ls
+ls
+ls
+rev|
+|rev
+clear
+cmear
+ls -z 2>&1 | rev
+cat file
+ls -l auteur raerze 1>file 2>&1 | rev
+ls -l auteur raerze 1>file 2>&1
+ls -l auteur raerze 
+
+clear
+cat < file
+cat file
+ file
+ls > file
+rev
+ls|
+ls;
+ls ; ls
+clear
+ls
+cat file
+ls >> file 
+clear
+cat < file
+cat file
+ ls >file
+ls
+clear
+ls
+make fre
+clear
+ls auteur FILE 2>&1
+ls auteur FILE
+ls AZEAZE FILE
+cat file
+ls > file
+cat file
+echo lol >&2 2> file
+cat file
+ls >&2 2> file
+ls -z
+ls
+echo lol >&2 2>&1 | cat -e
+exit
+ls -z
+echo lol >&2  
+echo lol
+ls
+clear
+clear
+"
+echo "lo
+ls
+rev
+ls |
+ls
+clear
+ls
+clear
+cat file
+ls azeaz auteur 2>&- > file
+ls azeaz auteur 2>&-
+ls azeaz auteur
+ls >&-
+ls auteur er 2>&1
+ls auteur er
+ls
+ls -z 2>&1 | rev
+cat file  zf 2>&1 >file
+cat file
+ls auteur ez > file 2>&1 | rev
+cat file
+ls auteur ze >file 2>&1
+cat file
+ls > file
+ls
+ls -z
+ls -l auteur ze >file 2>&1
+ls -l auteur zerae
+ls -l auteur zerza 2>&1
+ls -l auteur zerza
+ls
+clear
+cat file
+ls -l auteur ze 2>file
+ls -l auteur ze
+ls -l
+env
+ls
+clear
+ls
+exit
+ls aze
+cat file
+ls -l auteur erda > file 2>&1
+ls -l auteur err >file
+ls -l auteur err 2>&1 | rev
+ls -l auteur zfzef 2>&1
+ls -l auteur zfzef
+ls > file
+ls
+cat file
+ls -l auteur > file 2>&1
+ls -l auteur 
+cat file
+ls -l auteur zerf > file 2>&1
+ls -l auteur zerf > file 2>&1 | rev
+ls -l auteur zerf > file 2>&1
+ls
+clear
+ls -l auteur zerf > file 
+ls -l auteur zerf > file 
+ls -l auteur zerf > file 
+cat file
+ls > file
+ls
+clear
+ar
+ls
+ls
+clear
+cat < file
+ls > file
+ls -l auteur fzzef 1>&- 2>&1
+ls -l auteur efze 1>&-
+cat file
+ls -l auteur rfrf 1>file 2>&1
+ls -l auteur rfrf 1>&- 2>&1
+ls
+cat file  zf 1>&- 2>&1 | rev
+cat file
+ls > file
+ls
+clear
+cat < file
+ls >> file
+ls > file
+rm -rf file
+ls
+ls -l auteur rfrf 1>&- 2>&1
+ls > file
+
+clear
+ls
+ls -l auteur rfrf 1>&- 2>&1
+ls -l auteur rfrf 1>&- 2>&1
+ls -l auteur rfrf 1>&- 2>&1
+ls -l auteur rfrf 1>&- 2>&1
+ls -l auteur rfrf 1>&- 2>&1
+ls -l auteur rfrf 1>&- 2>&1
+ls -l auteur rfrf 1>&- 2>&1
+ls -l auteur rfrf 1>&- 2>&1
+ls -l auteur rfrf 1>&- 2>&1
+ls -l auteur rfrf 1>&- 2>&1
+ls -l auteur rfrf
+ls > file ; ls >> file; cat file | grep Make
+ls > file ; ls >> file; cat file
+ls > file
+ls
+ls >> file
+ls > file
+cat file
+ls > file
+ls -l auteur  feff 2>&-
+ls -l auteur  feff
+clear
+ls > file && cat < file
+cat file
+ls >   file ; ls >> file
+ls
+ls> file
+ls
+clear
+ls
+ls > file
+cat file
+ls > file; cat file | rev > file
+ls > file
+ls
+ls -l auteur dz 1>&- 2>&1
+ls -l auteur dz 1>&-
+ls
+rev
+ls |
+clear
+"
+xptdr
+lol
+echo "
+ls -l
+ls
+clear
+celar
+ls
+clear
+ls
+env | grep PWD | cat -e
+env | grep PWD
+clear
+env
+ks
+env|rev
+clear
+ls
+clear
+cleara
+ls
+cat file
+ls | rev < file
+ls | rev
+ls | rev < file
+ls | rev > file
+ls | rev
+cat file
+ls > file
+rm -rf file
+cat file
+ls | rev < file
+ls | rev
+clear
+rev < file
+rev < file
+cat file
+ls >> file 
+cat file
+ls > file
+clear
+ls
+ls | rev < file
+rev < file
+cat < file
+cat file
+ls > file
+clear
+ls
+rev
+ls -l auteur 1>&- 2>&1 | 
+ls -l auteur 1>&- 2&>1 | 
+ls
+clear
+cat < file
+rev < file
+cat < file
+ls
+clear
+ls
+cat < file
+cat < file
+cat < file
+ls > file
+ls
+cat < file
+cat < file
+cat file
+ls > file
+ls
+ms
+cat < file
+cat file
+ls > file
+
+
+ls > file
+cat < file
+cat file
+ls > file
+cat < file
+ls > file
+ls
+cat < file
+clear
+cat file
+ls > file ;cat file
+ls
+cat < file
+cat file
+ls fa 2> file
+clear
+vls|re
+ls|re
+ls
+car
+ls
+ls&&
+ls
+clear
+rev
+ls |
+ls -
+ls
+clear
+ls
+ks
+cat < file
+cat < file
+cat file
+ls > file
+ls
+clear
+cler
+ls
+cat < Makefile
+cat file
+ls > file
+clear
+ls
+cat < Makefile
+cat file
+ls > file
+cat file
+ls > file
+ls
+re,v
+ls|
+ls
+ls > file
+cat < file
+ls
+clear
+ls >> file
+ls > file
+ls > file
+ls -l auteur ezrf 1>&- 2>&1 | rev
+ls -l auteur ezrf 2>&1 | rev
+ls -z 2>&1 | rev
+clear
+ls -z
+ls -z 2>&1
+ls -z
+ls
+ls -z 2>&1
+ls -z 2>&1
+ls > file
+ls > file
+ls -z
+ls -z 2> file
+ls
+ls > file
+rev
+ls|
+ls
+clear
+ls
+ls -l auteur ezf 1>&- 2>&1
+ls -l auteur ezf 1>&- 2>&1
+ls -l auteur zefaz 1>&-
+ls -l auteur zefaz
+ls -l
+env
+ls
+ls -l auteur ezf 1>&-  2>&1
+ls -l auteur e  2> file
+cat file
+ls -l auteur e  2> file
+clear
+cat file
+ls -z 2> file
+ls > file
+
+ls -l auteur zef 2>&1 1>&-
+ls -l auteur zef
+ls -l auteur
+clear
+cat file  zf 1>&- 2>&1 | rev
+cat file  zf
+cat file 
+cat file -e 
+clear
+env | grep PWD  > file
+env | grep PWD 
+env
+ls
+clear
+lol"
+echo "ezf
+clear
+ls&& ls
+ls
+clear
+ls
+rev
+ls|
+ls
+cat < file
+cat < fime
+cat file
+ls > file
+ls
+
+ls > file
+ls
+cat < file
+ls
+clear
+cat file
+ls >> file
+ls > file
+cat < file
+cat file
+ls > file
+ls > file
+cat < file
+cat file
+ls > file
+cat < file
+cat < file
+ls > file
+cat file
+ls > file
+cat < file
+cat < file
+ls > file
+cat file
+ls > file
+ls
+cat < file
+cat < file
+cat < file
+ls > file
+ls
+cat < file
+cat < file
+cat file
+ls > file
+ls
+clear
+ls
+ls -R
+ls
+clear
+l"
+echo "lol
+cat < file
+cat file
+ls > file
+ls
+ls
+cat < file
+cat file
+ls > file
+ls
+clear
+ls
+cat < file
+ls -r
+pwd
+ls
+ld
+clrezr
+clezr
+ls
+ld
+cat < file
+ls
+caat < file
+cat < file
+ls
+cat < file
+cat file
+ls > file
+";ls|rev
+echo "lol
+j'ai" ; ls
+ech "f
+rev
+ls|
+clear
+ls
+clear
+cat < Makefile
+cat file
+ls > file
+cat < file
+cat file
+env | grep PWD > file
+rm -rf file
+cat file
+ls >> file
+cat file
+ls > file
+cat < file
+cat < fil
+ls
+cat < file
+cat < file
+cat file
+ls > file
+ls
+
+ls > file
+ls > file
+clear
+ls
+cat file
+ls > file
+>
+clear
+cat < file
+cat file
+ls >> file
+cat file
+cat < file
+clear
+ls
+cat < file
+cat file
+ls
+clear
+env
+ls
+clear
+lol"
+\"\" "     "
+lol
+echo "lol \"\"        
+ls
+cleear
+ls
+ls&&
+ls
+clear
+ls
+exit
+&&ls
+ls
+&&ls
+rev
+ls|
+rev
+ls|
+|rev
+rev
+ls |
+"
+j'ai faim
+lss
+echo "mdr
+echo "lol"
+ls
+clear
+cat file
+echo \&\&\|\|\" >>file
+cat file
+env | grep PWD > file
+ls
+clear
+ar
+ls
+clear
+cat file
+ls > file
+clear
+ls
+cat < file
+cat < file
+cat file
+cat file
+echo end >> file
+cat file
+env | grep PWD > file
+ls
+ls
+clear
+ls
+env | grep PWD > file
+rm -rf file
+ls -l
+env | grep PWD > file
+env
+clear
+ls
+cat < file
+ls
+ls > file
+cat < file
+clear
+ls
+cat file
+env | grep HOME > file
+env | grep HOME
+ls
+cat file
+ls
+rm -rf d
+clear
+ls
+cd
+env
+ls
+ls
+cat file
+ls > file
+ls
+clear
+ls > d
+mkdir d
+ls
 exit
 make save
 cleaar
